@@ -7,6 +7,7 @@
 * Dev - Fixed menu navigation improved
 * Fix - Code refactored to follow the latest Tour Operator plugin workflow
 * Fix - Small fixes on front-end fields
+* Fix - Fixed content_part filter for plugin and add-ons
 
 ### 1.0.2
 * Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)
